--- a/AuthExamples.ProtectedWebApi/packages.config
+++ b/AuthExamples.ProtectedWebApi/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net47" />
+  <package id="Owin" version="1.0" targetFramework="net47" />
 </packages>
