--- a/AuthExamples.ProtectedWebApi/AuthExamples.ProtectedWebApi.csproj
+++ b/AuthExamples.ProtectedWebApi/AuthExamples.ProtectedWebApi.csproj
@@ -96,6 +96,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
