--- a/AuthExamples.ProtectedWebApi/packages.config
+++ b/AuthExamples.ProtectedWebApi/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="IdentityModel" version="1.9.2" targetFramework="net47" />
   <package id="IdentityServer3.AccessTokenValidation" version="2.15.0" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.2.206221351" targetFramework="net47" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net47" />
   <package id="Microsoft.Owin.Security.Jwt" version="3.0.1" targetFramework="net47" />
